--- a/index.html
+++ b/index.html
@@ -415,6 +415,10 @@
             </li>
           </ul>
         </div>
+        <form>
+          <input type="E-mail" />
+          <button type="button">Subscribe</button>
+        </form>
       </div>
     </footer>
     <div data-modal="" class="backdrop is-hidden">
