--- a/index.html
+++ b/index.html
@@ -415,10 +415,25 @@
             </li>
           </ul>
         </div>
-        <form>
-          <input type="E-mail" />
-          <button type="button">Subscribe</button>
-        </form>
+        <div class="footer-form">
+          <p class="p-form">Subscribe</p>
+          <form class="form" action="">
+            <label class="label-form" for="">
+              <input
+                class="input-form"
+                name="mail"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="btn-form" type="submit">
+              Subscribe
+              <svg class="svg-form" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div data-modal="" class="backdrop is-hidden">
