--- a/portfolio.html
+++ b/portfolio.html
@@ -303,6 +303,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="p-form">Subscribe</p>
+          <form class="form" action="">
+            <label class="label-form" for="">
+              <input
+                class="input-form"
+                name="mail"
+                type="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="btn-form" type="submit">
+              Subscribe
+              <svg class="svg-form" width="24" height="24">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
