--- a/index.html
+++ b/index.html
@@ -445,7 +445,23 @@
         </button>
         <p class="p-modal">Leave your contacts and we will call you back</p>
         <form action="">
-          <div></div>
+          <div class="form-class">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input">
+              <input
+                class="input-name"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="input-svg" width="18" height="24">
+                <use href=""></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-class">
+            <label for="">Phone</label>
+          </div>
         </form>
       </div>
     </div>
