--- a/index.html
+++ b/index.html
@@ -460,7 +460,13 @@
             </div>
           </div>
           <div class="form-class">
-            <label for="">Phone</label>
+            <label class="modal-label" for="">Phone</label>
+            <div class="modal-input">
+              <input type="text" />
+              <svg>
+                <use></use>
+              </svg>
+            </div>
           </div>
         </form>
       </div>
