--- a/index.html
+++ b/index.html
@@ -462,9 +462,28 @@
           <div class="form-class">
             <label class="modal-label" for="">Phone</label>
             <div class="modal-input">
-              <input type="text" />
-              <svg>
-                <use></use>
+              <input
+                class="input-name"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="input-svg" width="18" height="24">
+                <use href=""></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-class">
+            <label class="modal-label" for="">Email</label>
+            <div class="modal-input">
+              <input
+                class="input-name"
+                id="user-name"
+                name="user-name"
+                type="text"
+              />
+              <svg class="input-svg" width="18" height="24">
+                <use href=""></use>
               </svg>
             </div>
           </div>
