--- a/index.html
+++ b/index.html
@@ -487,6 +487,29 @@
               </svg>
             </div>
           </div>
+          <div class="form-class-2">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-textarea"
+              placeholder="Text input"
+              name="user-comment"
+            ></textarea>
+          </div>
+          <div class="checkbox">
+            <input
+              class="input-checkbox visually-hidden"
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+            />
+            <label class="check-label" for="user-privacy">
+              I accept the terms and conditions of the<span class="span-label">
+                <svg width="10" height="8">
+                  <use href=""></use></svg></span
+            ></label>
+          </div>
+          <button class="btn-label">Send</button>
         </form>
       </div>
     </div>
