--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 type="text"
               />
               <svg class="input-svg" width="18" height="24">
-                <use href=""></use>
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
           </div>
@@ -469,7 +469,7 @@
                 type="text"
               />
               <svg class="input-svg" width="18" height="24">
-                <use href=""></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
           </div>
@@ -483,7 +483,7 @@
                 type="text"
               />
               <svg class="input-svg" width="18" height="24">
-                <use href=""></use>
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
