--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             <textarea
               class="form-textarea"
               placeholder="Text input"
-              name="user-comment"
+              id="user-comment"
             ></textarea>
           </div>
           <div class="checkbox">
