--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
               class="form-textarea"
               placeholder="Text input"
               id="user-comment"
+              name="user-comment"
             ></textarea>
           </div>
           <div class="checkbox">
