--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-class-2">
+          <div class="form-class">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
