--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               </svg>
             </div>
           </div>
-          <div class="form-class">
+          <div class="form-class-tw">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
@@ -507,8 +507,10 @@
             <label class="check-label" for="user-privacy">
               I accept the terms and conditions of the<span class="span-label">
                 <svg width="10" height="8">
-                  <use href=""></use></svg></span
-            ></label>
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+              </span>
+            </label>
           </div>
           <button class="btn-label">Send</button>
         </form>
