--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@
             />
             <label class="check-label" for="user-privacy">
               I accept the terms and conditions of the<span class="span-label">
+                <a class="link-chek" href="">Privacy Policy</a>
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
