--- a/index.html
+++ b/index.html
@@ -505,8 +505,9 @@
               name="user-privacy"
             />
             <label class="check-label" for="user-privacy">
-              I accept the terms and conditions of the<span class="span-label">
-                <a class="link-chek" href="">Privacy Policy</a>
+              I accept the terms and conditions of the
+              <a class="link-chek" href="">Privacy Policy</a>
+              <span class="span-label">
                 <svg width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
