--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
         </div>
         <div class="footer-form">
           <p class="p-form">Subscribe</p>
-          <form class="form" action="">
-            <label class="label-form" for="">
+          <form class="form">
+            <label class="label-form">
               <input
                 class="input-form"
                 name="mail"
@@ -444,7 +444,7 @@
           </svg>
         </button>
         <p class="p-modal">Leave your contacts and we will call you back</p>
-        <form action="">
+        <form>
           <div class="form-class">
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-input">
@@ -460,7 +460,7 @@
             </div>
           </div>
           <div class="form-class">
-            <label class="modal-label" for="">Phone</label>
+            <label class="modal-label">Phone</label>
             <div class="modal-input">
               <input
                 class="input-name"
@@ -474,7 +474,7 @@
             </div>
           </div>
           <div class="form-class">
-            <label class="modal-label" for="">Email</label>
+            <label class="modal-label">Email</label>
             <div class="modal-input">
               <input
                 class="input-name"
