--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
             </div>
           </div>
           <div class="form-class">
-            <label class="modal-label">Phone</label>
+            <label class="modal-label" for="user-name">Phone</label>
             <div class="modal-input">
               <input
                 class="input-name"
@@ -474,7 +474,7 @@
             </div>
           </div>
           <div class="form-class">
-            <label class="modal-label">Email</label>
+            <label class="modal-label" for="user-name">Email</label>
             <div class="modal-input">
               <input
                 class="input-name"
