--- a/index.html
+++ b/index.html
@@ -460,11 +460,11 @@
             </div>
           </div>
           <div class="form-class">
-            <label class="modal-label" for="user-name">Phone</label>
+            <label class="modal-label">Phone</label>
             <div class="modal-input">
               <input
                 class="input-name"
-                id="user-name"
+                id="phone-name"
                 name="user-name"
                 type="text"
               />
@@ -474,11 +474,11 @@
             </div>
           </div>
           <div class="form-class">
-            <label class="modal-label" for="user-name">Email</label>
+            <label class="modal-label">Email</label>
             <div class="modal-input">
               <input
                 class="input-name"
-                id="user-name"
+                id="mail-name"
                 name="user-name"
                 type="text"
               />
