--- a/portfolio.html
+++ b/portfolio.html
@@ -305,8 +305,8 @@
         </div>
         <div class="footer-form">
           <p class="p-form">Subscribe</p>
-          <form class="form" action="">
-            <label class="label-form" for="">
+          <form class="form">
+            <label class="label-form">
               <input
                 class="input-form"
                 name="mail"
